Reducing title font size by 1px to resolve slight overlapping in smallest screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ header {
     }
     #title {
         left: 36px;
-        font-size: 20px;
+        font-size: 19px;
     }
 }
 
